# swagger.json
@@ -755,6 +755,30 @@
               "maximum": 50,
               "default": 10
             }
+          },
+          {
+            "in": "query",
+            "name": "q",
+            "required": false,
+            "description": "Searches name, email, and username",
+            "schema": {
+              "type": "string",
+              "default": "username"
+            }
+          },
+          {
+            "in": "query",
+            "name": "role",
+            "required": false,
+            "description": "Filter by role (admin or customer)",
+            "schema": {
+              "type": "string"
+            },
+            "enum": [
+              "admin",
+              "customer"
+            ],
+            "default": "customer"
           }
         ],
         "responses": {
